--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -201,7 +201,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background-image: url("../img/home/wave.svg");
+        background-image: url("../assets/img/home/wave.svg");
         background-size:100vw;
         background-repeat: no-repeat;
         object-fit: cover;
