--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -231,7 +231,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: url("../img/home/wave.svg");
+  background-image: url("../assets/img/home/wave.svg");
   background-size: 100vw;
   background-repeat: no-repeat;
   -o-object-fit: cover;
